# Live-Trading-Platform

./: .gitignore  README.md  config.py  hello.py  main.py  pyproject.toml  settings.toml  trade.py
figures/: backend_design.drawio
notebooks/: eda_aapl.ipynb  eda_msft.ipynb  ml_strategy_test.ipynb  model_experimenting.ipynb  msft_hist_data.ipynb  trades.ipynb  tree_experimenting.ipynb
src/alpaca_trader/: live_trading.py  order.py
src/api_getter/: algorithm.py  api.py  live_trading.py  order.py  strategy.py  trader.py  tradingbot.py
src/live_trader/: __init__.py  config.py
src/live_trader/alpaca_trader/: __init__.py  live_trading.py  order.py
src/live_trader/ml_model/: __init__.py  data.py  evaluations.py  layers.py  ml_pipeline.py  ml_strategies.py  ml_strategy.py  modelling.py  training.py  utils.py
src/live_trader/strategies/: __init__.py  backtest.py  bollinger_bands_strategy.py  data.py  macd.py  mean_reversion.py  momentum.py  moving_average_strategy.py  rsi.py  run_backtest.py  strategies.py  strategy.py  utils.py
src/live_trader/tree_based_models/: __init__.py  tree_based_strategies.py  tree_modelling.py  tree_strategies.py
src/ml-model/: data.py
src/ml_model/: data.py  evaluations.py  ml_strategy.py  modelling.py  training.py
src/strategies/: Mean_reversion.py  backtest.py  bollinger_bands_strategy.py  fetch_price_data.py  macd.py  mean_reversion.py  momentum.py  moving_average_strategy.py  order.py  rsi.py  run_backtest.py  strategies.py  strategy.py  strategy_basics.py
