[project]
name = "live-trading-platform"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca_trade_api",
    "numpy",
    "requests",
    "python-dotenv",
    "toml",
    "alpaca-py",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "tensorflow",
    "scikeras",
    "alpaca",
    "notebook ipykernel"
]

[tool.setuptools.packages.find]
where = ["src"]