[tool.poetry]
name = "live-trading-platform"
version = "0.2.1"
description = "Creating new solutions based on the Alpaca platform that can help traders make better-informed decisions and execute trades more efficiently."
readme = "README.md"
authors = ["Milad Tootoonchi <milad.tootoonchi04@gmail.com>"]

packages = [
    { include = "live_trader", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"

alpaca_trade_api = "*"
alpaca-py = "*"
alpaca = "*"

numpy = "*"
pandas = "*"
requests = "*"
python-dotenv = "*"
toml = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"
scipy = "*"
tensorflow = "*"
scikeras = "*"

notebook = "*"
ipykernel = "*"

[tool.poetry.group.dev.dependencies]
# pytest = "*"
# black = "*"
# ruff = "*"

[tool.poetry.scripts]
trade = "main:cli"